--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,3 +39,9 @@
   width: inherit !important;
   margin: 0 !important;
 }
+
+body {
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 900;
+  font-size: 17px;
+}
