--- a/app/views/cereal_stores/_form.html.erb
+++ b/app/views/cereal_stores/_form.html.erb
@@ -38,9 +38,9 @@
   </div>
 
   <div class="field">
-    <%= form.label :type, class:"label" %>
+    <%= form.label :types, class:"label" %>
     <div class="control">
-      <%= form.text_field :type, class:"input" %>
+      <%= form.text_field :types, class:"input" %>
     </div>
   </div>
 
