--- a/app/views/cereal_stores/index.html.erb
+++ b/app/views/cereal_stores/index.html.erb
@@ -28,7 +28,7 @@
         <td><%= cereal_store.date %></td>
         <td><%= cereal_store.season %></td>
         <td><%= cereal_store.farm_name %></td>
-        <td><%= cereal_store.type %></td>
+        <td><%= cereal_store.types %></td>
         <td><%= cereal_store.cereal_name %></td>
         <td><%= cereal_store.quantity %></td>
         <td><%= cereal_store.unit %></td>
