--- a/app/views/harvestings/_form.html.erb
+++ b/app/views/harvestings/_form.html.erb
@@ -37,8 +37,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :crop, class:"label" %>
-    <%= form.text_field :crop, class:"input" %>
+    <%= form.label :cereal_name, class:"label" %>
+    <%= form.text_field :cereal_name, class:"input" %>
   </div>
 
   <div class="field">
