--- a/app/views/harvestings/index.html.erb
+++ b/app/views/harvestings/index.html.erb
@@ -10,7 +10,7 @@
       <th>Season</th>
       <th>Farm name</th>
       <th>Section</th>
-      <th>Crop</th>
+      <th>Cereal Name</th>
       <th>Kgs done</th>
       <th>Pro number</th>
       <th>User</th>
@@ -26,7 +26,7 @@
         <td><%= harvesting.season %></td>
         <td><%= harvesting.farm_name %></td>
         <td><%= harvesting.section %></td>
-        <td><%= harvesting.crop %></td>
+        <td><%= harvesting.cereal_name %></td>
         <td><%= harvesting.kgs_done %></td>
         <td><%= harvesting.pro_number %></td>
         <td><%= harvesting.user_id %></td>
@@ -36,6 +36,7 @@
       </tr>
     <% end %>
   </tbody>
+  
 </table>
 
 <br>
