--- a/app/views/harvestings/show.html.erb
+++ b/app/views/harvestings/show.html.erb
@@ -11,7 +11,7 @@
 </p>
 
 <p>
-  <strong>eason:</strong>
+  <strong>Season:</strong>
   <%= @harvesting.season %>
 </p>
 
@@ -26,8 +26,8 @@
 </p>
 
 <p>
-  <strong>Crop:</strong>
-  <%= @harvesting.crop %>
+  <strong>Cereal Name:</strong>
+  <%= @harvesting.cereal_name %>
 </p>
 
 <p>
