Add changes to index pages

--- a/app/views/cash_requisitions/index.html.erb
+++ b/app/views/cash_requisitions/index.html.erb
@@ -1,47 +1,45 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Cash Requisition', new_cash_requisition_path, class:"button is-success my-3" %>
-<h1 class="has-background-white">Cash Requisitions</h1>
 
-<table class="table is-striped is-bordered">
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Date</th>
-      <th>Season</th>
-      <th>Farm name</th>
-      <th>Employee name</th>
-      <th>Amount requested</th>
-      <th>Amount issued</th>
-      <th>Pay from</th>
-      <th>Pay to</th>
-      <th>Pro number</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @cash_requisitions.each do |cash_requisition| %>
+<div class="box">
+  <h1 class="has-text-centered"><strong>Cash Requisitions</strong></h1>
+
+  <table class="table is-striped is-bordered">
+    <thead>
       <tr>
-        <td><%= cash_requisition.company_name %></td>
-        <td><%= cash_requisition.date %></td>
-        <td><%= cash_requisition.season %></td>
-        <td><%= cash_requisition.farm_name %></td>
-        <td><%= cash_requisition.employee_name %></td>
-        <td><%= cash_requisition.amount_requested %></td>
-        <td><%= cash_requisition.amount_issued %></td>
-        <td><%= cash_requisition.pay_from %></td>
-        <td><%= cash_requisition.pay_to %></td>
-        <td><%= cash_requisition.pro_number %></td>
-        <td><%= cash_requisition.user_id %></td>
-        <td><%= link_to 'Show', cash_requisition %></td>
-        <td><%= link_to 'Edit', edit_cash_requisition_path(cash_requisition) %></td>
-        <td><%= link_to 'Destroy', cash_requisition, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Company name</th>
+        <th>Date</th>
+        <th>Season</th>
+        <th>Farm name</th>
+        <th>Employee name</th>
+        <th>Amount requested</th>
+        <th>Amount issued</th>
+        <th>Pay from</th>
+        <th>Pay to</th>
+        <th>Pro number</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-
+    <tbody>
+      <% @cash_requisitions.each do |cash_requisition| %>
+        <tr>
+          <td><%= cash_requisition.company_name %></td>
+          <td><%= cash_requisition.date %></td>
+          <td><%= cash_requisition.season %></td>
+          <td><%= cash_requisition.farm_name %></td>
+          <td><%= cash_requisition.employee_name %></td>
+          <td>$<%= cash_requisition.amount_requested %></td>
+          <td>$<%= cash_requisition.amount_issued %></td>
+          <td><%= cash_requisition.pay_from %></td>
+          <td><%= cash_requisition.pay_to %></td>
+          <td><%= cash_requisition.pro_number %></td>
+          <td><%= link_to 'Show', cash_requisition %></td>
+          <td><%= link_to 'Edit', edit_cash_requisition_path(cash_requisition) %></td>
+          <td><%= link_to 'Destroy', cash_requisition, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
