--- a/app/views/cashflows/index.html.erb
+++ b/app/views/cashflows/index.html.erb
@@ -1,57 +1,56 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Cashflow', new_cashflow_path, class:"button is-success my-3" %>
-<h1 class="has-background-white">Cashflows</h1>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Date</th>
-      <th>Season</th>
-      <th>Month</th>
-      <th>Grower name</th>
-      <th>Hectrage</th>
-      <th>Operation</th>
-      <th>Unit price</th>
-      <th>Quantity per hectre</th>
-      <th>Unity</th>
-      <th>Input name</th>
-      <th>Total amount</th>
-      <th>Pro number</th>
-      <th>Tian Ze  number</th>
-      <th>Total Quantity</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="box">
+  <h1 class="has-text-centered"><strong>Cashflows</strong></h1>
 
-  <tbody>
-    <% @cashflows.each do |cashflow| %>
+  <table class="table is-striped is-bordered">
+    <thead>
       <tr>
-        <td><%= cashflow.company_name %></td>
-        <td><%= cashflow.date %></td>
-        <td><%= cashflow.season %></td>
-        <td><%= cashflow.month %></td>
-        <td><%= cashflow.grower_name %></td>
-        <td><%= cashflow.hectrage %></td>
-        <td><%= cashflow.operation %></td>
-        <td><%= cashflow.unit_price %></td>
-        <td><%= cashflow.quantity_per_hectre %></td>
-        <td><%= cashflow.unity %></td>
-        <td><%= cashflow.input_name %></td>
-        <td><%= cashflow.total_amount %></td>
-        <td><%= cashflow.pro_number %></td>
-        <td><%= cashflow.tian_ze_number %></td>
-        <td><%= cashflow.total_quantity %></td>
-        <td><%= cashflow.user_id %></td>
-        <td><%= link_to 'Show', cashflow %></td>
-        <td><%= link_to 'Edit', edit_cashflow_path(cashflow) %></td>
-        <td><%= link_to 'Destroy', cashflow, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Company name</th>
+        <th>Date</th>
+        <th>Season</th>
+        <th>Month</th>
+        <th>Grower name</th>
+        <th>Hectrage</th>
+        <th>Operation</th>
+        <th>Unit price</th>
+        <th>Quantity per hectre</th>
+        <th>Unity</th>
+        <th>Input name</th>
+        <th>Total amount</th>
+        <th>Pro number</th>
+        <th>Tian Ze  number</th>
+        <th>Total Quantity</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @cashflows.each do |cashflow| %>
+        <tr>
+          <td><%= cashflow.company_name %></td>
+          <td><%= cashflow.date %></td>
+          <td><%= cashflow.season %></td>
+          <td><%= cashflow.month %></td>
+          <td><%= cashflow.grower_name %></td>
+          <td><%= cashflow.hectrage %></td>
+          <td><%= cashflow.operation %></td>
+          <td><%= cashflow.unit_price %></td>
+          <td><%= cashflow.quantity_per_hectre %></td>
+          <td><%= cashflow.unity %></td>
+          <td><%= cashflow.input_name %></td>
+          <td><%= cashflow.total_amount %></td>
+          <td><%= cashflow.pro_number %></td>
+          <td><%= cashflow.tian_ze_number %></td>
+          <td><%= cashflow.total_quantity %></td>
+          <td><%= link_to 'Show', cashflow %></td>
+          <td><%= link_to 'Edit', edit_cashflow_path(cashflow) %></td>
+          <td><%= link_to 'Destroy', cashflow, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 
