--- a/app/views/deduction_tables/index.html.erb
+++ b/app/views/deduction_tables/index.html.erb
@@ -1,50 +1,48 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Deduction Table', new_deduction_table_path, class:"button is-success my-3" %>
-<h1 class="has-background-white">Deduction Tables</h1>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Season</th>
-      <th>Month</th>
-      <th>Employee Name</th>
-      <th>Employee Number</th>
-      <th>Farm name</th>
-      <th>Allowance</th>
-      <th>Payee</th>
-      <th>NSSA</th>
-      <th>NEC</th>
-      <th>Cash Requests</th>
-      <th>Total Amount</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="box">
+  <h1 class="has-text-centered">Deduction Tables</h1>
 
-  <tbody>
-    <% @deduction_tables.each do |deduction_table| %>
+  <table class="table is-bordered is-striped">
+    <thead>
       <tr>
-        <td><%= deduction_table.season %></td>
-        <td><%= deduction_table.month %></td>
-        <td><%= deduction_table.employee_name %></td>
-        <td><%= deduction_table.employee_number %></td>
-        <td><%= deduction_table.farm_name %></td>
-        <td><%= deduction_table.allowance %></td>
-        <td><%= deduction_table.payee %></td>
-        <td><%= deduction_table.nssa %></td>
-        <td><%= deduction_table.nec %></td>
-        <td><%= deduction_table.cash_requests %></td>
-        <td>
-        <%= deduction_table.total_amount %>
-        <%# <%= employee_deductions(deduction_table.employee_name) %>
-        </td> %>
-        <td><%= link_to 'Show', deduction_table %></td>
-        <td><%= link_to 'Edit', edit_deduction_table_path(deduction_table) %></td>
-        <td><%= link_to 'Destroy', deduction_table, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Season</th>
+        <th>Month</th>
+        <th>Employee Name</th>
+        <th>Employee Number</th>
+        <th>Farm name</th>
+        <th>Allowance</th>
+        <th>Payee</th>
+        <th>NSSA</th>
+        <th>NEC</th>
+        <th>Cash Requests</th>
+        <th>Total Amount</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-
+    <tbody>
+      <% @deduction_tables.each do |deduction_table| %>
+        <tr>
+          <td><%= deduction_table.season %></td>
+          <td><%= deduction_table.month %></td>
+          <td><%= deduction_table.employee_name %></td>
+          <td><%= deduction_table.employee_number %></td>
+          <td><%= deduction_table.farm_name %></td>
+          <td><%= deduction_table.allowance %></td>
+          <td><%= deduction_table.payee %></td>
+          <td><%= deduction_table.nssa %></td>
+          <td><%= deduction_table.nec %></td>
+          <td><%= deduction_table.cash_requests %></td>
+          <td>
+          <%= deduction_table.total_amount %>
+          </td> 
+          <td><%= link_to 'Show', deduction_table %></td>
+          <td><%= link_to 'Edit', edit_deduction_table_path(deduction_table) %></td>
+          <td><%= link_to 'Destroy', deduction_table, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
