--- a/app/views/cereal_sales/index.html.erb
+++ b/app/views/cereal_sales/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Cereal Sale', new_cereal_sale_path, class:"button is-success my-3" %>
+<div class='box'>
 <h1 class="has-background-white">Cereal Sales</h1>
 
 <table class="table">
@@ -57,5 +58,5 @@
 </table>
 
 <br>
-
+</div>
 
