--- a/app/views/cereal_stores/edit.html.erb
+++ b/app/views/cereal_stores/edit.html.erb
@@ -1,6 +1,91 @@
-<h1>Editing Cereal Store</h1>
+<div class="box">
+  <%= form_with(model: @cereal_store, local: true) do |form| %>
+    <% if @cereal_store.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@cereal_store.errors.count, "error") %> prohibited this cereal_store from being saved:</h2>
+        <ul>
+          <% @cereal_store.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
 
-<%= render 'form', cereal_store: @cereal_store %>
+    <div class="field">
+      <%= form.select :company_name, [current_user.Company_Name], type: :hidden %>
+    </div>
 
-<%= link_to 'Show', @cereal_store %> |
-<%= link_to 'Back', cereal_stores_path %>
+    <div class="field">
+      <div class="control">
+        <%= form.text_field :season, type: :hidden %>
+      </div>
+    </div>
+
+    <div class="field">
+      <div class="control">
+        <%= form.text_field :farm_name, type: :hidden %>
+      </div>
+    </div>
+
+    <div class="field">
+      <div class="control">
+        <%= form.text_field :types, type: :hidden %>
+      </div>
+    </div>
+
+    <div class="field">
+      <div class="control">
+        <%= form.text_field :input_name, type: :hidden%>
+      </div>
+    </div>
+
+    <div class="field">
+      <div class="control">
+        <%= form.text_field :quantity, type: :hidden %>
+      </div>
+    </div>
+
+    <div class="field">
+      <div class="control">
+        <%= form.text_field :unit, type: :hidden %>
+      </div>
+    </div>
+
+    <div class="field">
+      <%= form.label :top_up, class:"label" %>
+      <div class="control">
+        <%= form.text_field :top_up, class:"input" %>
+      </div>
+    </div>
+
+    <div class="field">
+      <%= form.label :unit_price, class:"label" %>
+      <div class="control">
+        <%= form.text_field :unit_price, class:'input' %>
+      </div>
+    </div>
+
+    <div class="field">
+      <div class="control">
+        <%= form.text_field :total_amount, type: :hidden %>
+      </div>
+    </div>
+
+    <div class="field">
+      <div class="control">
+        <%= form.text_field :pro_number, type: :hidden %>
+      </div>
+    </div>
+
+    
+    <div class="field">
+      <%= form.text_field :user_id, value: current_user.id, type: :hidden %>
+    </div>
+
+    <div class="actions">
+      <%= form.submit class:"button is-success" %>
+    </div>
+  <% end %>
+
+</div>
+<%= link_to 'Back', cereal_stores_path, class:'button is-dark' %>
