--- a/app/views/curings/index.html.erb
+++ b/app/views/curings/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Curing', new_curing_path, class:"button is-success my-3" %>
+<div class='box'>
 <h1 class="has-background-white">Curings</h1>
 
 <table class="table">
@@ -41,5 +42,5 @@
 </table>
 
 <br>
-
+</div>
 
