--- a/app/views/equipment_services/index.html.erb
+++ b/app/views/equipment_services/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Equipment Service', new_equipment_service_path, class:"button is-success my-3" %>
+<div class='box'>
 <h1 class="has-background-white">Equipment Services</h1>
 
 <table class="table">
@@ -47,5 +48,5 @@
 </table>
 
 <br>
-
+</div>
 
