--- a/app/views/harvestings/index.html.erb
+++ b/app/views/harvestings/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Harvesting', new_harvesting_path, class:"button is-success my-3" %>
+<div class='box'>
 <h1 class="has-background-white">Harvestings</h1>
 
 <table class="table">
@@ -40,5 +41,5 @@
 </table>
 
 <br>
-
+</div>
 
