--- a/app/views/input_stores_usages/index.html.erb
+++ b/app/views/input_stores_usages/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<div class='box'>
 <h1>Input Stores Usages</h1>
 
 <table class="table">
@@ -43,6 +43,7 @@
 </table>
 
 <br>
+</div>
 <%= link_to 'Bin', bin_input_stores_usage_path(@input_stores_usages), class:"button is-success" %>
 
 <%= link_to 'New Input Stores Usage', new_input_stores_usage_path, class:"button is-success" %>
