--- a/app/views/rationings/index.html.erb
+++ b/app/views/rationings/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Rationing', new_rationing_path, class:"button is-success my-3" %>
+<div class='box'>
 <h1 class="has-background-white">Rationings</h1>
 
 <table class="table">
@@ -39,5 +40,5 @@
 </table>
 
 <br>
-
+</div>
 
