--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Rental', new_rental_path, class:"button is-success my-3" %>
-
+<div class='box'>
 <h1 class="has-background-white">Rentals</h1>
 
 <table class="table">
@@ -41,3 +41,4 @@
 
 <br>
 
+</div>
