--- a/app/views/seedbeds/index.html.erb
+++ b/app/views/seedbeds/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Seedbed', new_seedbed_path, class:"button is-success my-3" %>
+<div class='box'>
 <h1 class="has-background-white">Seedbeds</h1>
 
 <table class="table">
@@ -45,5 +46,5 @@
 </table>
 
 <br>
-
+</div>
 
