--- a/app/views/set_seasons/show.html.erb
+++ b/app/views/set_seasons/show.html.erb
@@ -2,7 +2,12 @@
 
 <p>
   <strong>Date:</strong>
-  <%= @set_season.date %>
+  <%= @set_season.date_from %>
+</p>
+
+<p>
+  <strong>Date:</strong>
+  <%= @set_season.date_to %>
 </p>
 
 <p>
