--- a/app/views/timebooks/index.html.erb
+++ b/app/views/timebooks/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <%= link_to 'New Timebook', new_timebook_path, class:"button is-success my-3" %>
-
+<div class='box'>
 <h1>Timebooks</h1>
 
 <table class="table">
@@ -35,3 +35,4 @@
     <% end %>
   </tbody>
 </table>
+</div>
