--- a/app/views/weathers/index.html.erb
+++ b/app/views/weathers/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Weather', new_weather_path, class:"button is-success my-3" %>
+<div class='box'>
 <h1 class="has-background-white">Weathers</h1>
 
 <table class="table">
@@ -31,5 +32,5 @@
 </table>
 
 <br>
-
+</div>
 
