--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,6 +86,11 @@ body {
   }
 }
 
+.outerdiv {
+  border: 3px solid gold;
+  box-shadow: 10px goldenrod;
+}
+
 .box-height-last  {
   height: 15vh;
   border-radius: 12px;
