--- a/app/views/advertisements/index.html.erb
+++ b/app/views/advertisements/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <%= link_to 'New Advertisement', new_advertisement_path, class:"button is-success my-3" %>
-
+<div class='box'>
 <h1 class="has-background-white">Advertisements</h1>
 
 <table class="table">
@@ -41,5 +41,5 @@
 </table>
 
 <br>
-
+</div>
 
