--- a/app/views/assets/index.html.erb
+++ b/app/views/assets/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <%= link_to 'New Asset', new_asset_path, class:"button is-success my-3" %>
+<div class='box'>
 <h1>Assets</h1>
 
 <table class="table">
@@ -44,5 +45,5 @@
 </table>
 
 <br>
-
+</div>
 
