--- a/app/views/daily_requisitions/index.html.erb
+++ b/app/views/daily_requisitions/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Daily Requisition', new_daily_requisition_path, class:"button is-success my-3" %>
+<div class='box'>
 <h1 class="has-background-white">Daily Requisitions</h1>
 
 <table class="table">
@@ -35,5 +36,5 @@
 </table>
 
 <br>
-
+</div>
 
