--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,10 @@
     <nav class="navbar is-light" role="navigation" aria-label="main navigation">
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item">
+          <%# <a class="navbar-item">
             Home
-          </a>
+          </a> %>
+          <%= link_to "Home", home_index_path, class:"navbar-item"%>
 
           <a class="navbar-item">
             Documentation
