--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Purchase', new_purchase_path, class:"button is-success my-3" %>
+<div class='box'>
 <h1 class="has-background-white">Purchases</h1>
 
 <table class="table">
@@ -43,5 +44,7 @@
 </table>
 
 <br>
+
+</div>
 
 
