--- a/app/views/set_seasons/index.html.erb
+++ b/app/views/set_seasons/index.html.erb
@@ -1,11 +1,12 @@
 <p id="notice"><%= notice %></p>
-
+<div class='box'>
 <h1 class="has-background-white">Set Seasons</h1>
 
 <table class="table">
   <thead>
     <tr>
-      <th>Date</th>
+      <th>Date From</th>
+      <th>Date To</th>
       <th>Season</th>
       <th>User</th>
       <th colspan="3"></th>
@@ -15,7 +16,8 @@
   <tbody>
     <% @set_seasons.each do |set_season| %>
       <tr>
-        <td><%= set_season.date %></td>
+        <td><%= set_season.date_from %></td>
+        <td><%= set_season.date_to %></td>
         <td><%= set_season.season %></td>
         <td><%= set_season.user_id %></td>
         <td><%= link_to 'Show', set_season %></td>
@@ -27,5 +29,5 @@
 </table>
 
 <br>
-
-<%= link_to 'New Set Season', new_set_season_path %>
+</div>
+<%= link_to 'New Set Season', new_set_season_path, class:'button is-success' %>
