--- a/app/views/wages/index.html.erb
+++ b/app/views/wages/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Wage', new_wage_path, class:"button is-success my-3" %>
+<div class='box'>
 <h1 class="has-background-white">Wages</h1>
 
 <table class="table">
@@ -52,4 +53,4 @@
 
 <br>
 
-
+</div>
