--- a/app/views/workshops/index.html.erb
+++ b/app/views/workshops/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 <%= link_to 'New Workshop', new_workshop_path, class:"button is-success my-3" %>
+<div class='box'>
 <h1 class="has-background-white">Workshops</h1>
 
 <table class="table">
@@ -37,5 +38,5 @@
 </table>
 
 <br>
-
+</div>
 
