--- a/app/views/set_seasons/index.html.erb
+++ b/app/views/set_seasons/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
+<%= link_to 'Create New Season', new_set_season_path, class:'button is-success mb-2' %>
 <div class='box'>
-<h1 class="has-background-white">Set Seasons</h1>
+<h1 class="has-background-white">All Non-Active-Seasons</h1>
 
 <table class="table">
   <thead>
@@ -9,7 +10,7 @@
       <th>Date To</th>
       <th>Season</th>
       <th>User</th>
-      <th colspan="3"></th>
+      <th colspan="4">Actions</th>
     </tr>
   </thead>
 
@@ -22,6 +23,13 @@
         <td><%= set_season.user_id %></td>
         <td><%= link_to 'Show', set_season %></td>
         <td><%= link_to 'Edit', edit_set_season_path(set_season) %></td>
+        <% unless active_season_available %>
+          <td>
+            <%= form_for set_season, :url =>[:activate_season, set_season], html: { method: :put } do |f| %>
+              <%= f.submit 'Activate Season' %>
+            <% end %>
+          </td>
+        <% end %>
         <td><%= link_to 'Destroy', set_season, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
@@ -30,4 +38,41 @@
 
 <br>
 </div>
-<%= link_to 'New Set Season', new_set_season_path, class:'button is-success' %>
+
+
+<div class='box'>
+<h1 class="has-background-white"><strong>Active Season</strong></h1>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th>Date From</th>
+      <th>Date To</th>
+      <th>Season</th>
+      <th>User</th>
+      <th colspan="4"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @active_season.each do |set_season| %>
+      <tr>
+        <td><%= set_season.date_from %></td>
+        <td><%= set_season.date_to %></td>
+        <td><%= set_season.season %></td>
+        <td><%= set_season.user_id %></td>
+        <td><%= link_to 'Show', set_season %></td>
+        <td><%= link_to 'Edit', edit_set_season_path(set_season) %></td>
+        <td>
+          <%= form_for set_season, :url =>[:deactivate_season, set_season], html: { method: :put } do |f| %>
+            <%= f.submit 'De-activate' %>
+          <% end %>
+        </td>
+        <td><%= link_to 'Destroy', set_season, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+</div>
