Add some changes to index page

--- a/app/views/set_seasons/_form.html.erb
+++ b/app/views/set_seasons/_form.html.erb
@@ -12,24 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :date_from, class:"label" %>
-    <div class="control">
-      <%= form.date_select :date_from, class:"input" %>
-    </div>
+      <strong>Date From:</strong> <%= form.date_select :date_from, class:"input" %>
   </div>
 
     <div class="field">
-    <%= form.label :date_to, class:"label" %>
-    <div class="control">
-      <%= form.date_select :date_to, class:"input" %>
-    </div>
-  </div>
-
-    <div class="field">
-    <%= form.label :is_active %>
-    <div class="control">
-      <%= form.check_box :is_active %>
-    </div>
+      <strong>Date To:</strong> <%= form.date_select :date_to, class:"input" %>
   </div>
 
   <div class="field">
@@ -40,9 +27,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :user_id, class:"label" %>
     <div class="control">
-      <%= form.text_field :user_id, class:"input" %>
+      <%= form.text_field :user_id, value: current_user.id, type: :hidden %>
     </div>
   </div>
 
