Add more styles to the project

--- a/app/views/set_seasons/edit.html.erb
+++ b/app/views/set_seasons/edit.html.erb
@@ -1,8 +1,8 @@
 
 <div class="columns is-centered">
   <div class="column is-6">
-    <div class="box">
-      <h1>Editing Season</h1>
+    <div class="box outerdiv">
+      <h1 class="has-text-centered outerdiv">Editing Season</h1>
       <%= render 'form', set_season: @set_season %>
       <%= link_to 'Show', @set_season %> |
       <%= link_to 'Back', set_seasons_path %>
