--- a/app/views/set_seasons/new.html.erb
+++ b/app/views/set_seasons/new.html.erb
@@ -1,8 +1,8 @@
 <div class="columns">
   <div class="column">
-    <div class="card">
+    <div class="card outerdiv">
       <div class="card-header">
-        <h1>New Set Season</h1>
+        <h1 class="has-text-centered">New Set Season</h1>
       </div>
       <div class="card-content">
         <div class="content">
