--- a/app/views/set_seasons/index.html.erb
+++ b/app/views/set_seasons/index.html.erb
@@ -3,7 +3,7 @@
 <div class='box orange'>
   <div class="columns is-centered">
     <div class="column is-6">
-      <div class="box">
+      <div class="box outerdiv">
         <h1 class="has-text-centered"><strong>All Non-Active-Seasons</strong></h1>
 
         <table class="table">
@@ -40,7 +40,7 @@
     </div>
 
     <div class="column is-6">
-      <div class="box">
+      <div class="box outerdiv">
         <h1 class="has-text-centered"><strong>Active Season</strong></h1>
 
         <table class="table">
