--- a/app/views/set_seasons/index.html.erb
+++ b/app/views/set_seasons/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<%= link_to 'Create New Season', new_set_season_path, class:'button is-success mb-2' %>
+<%= link_to 'Create New Season', new_set_season_path, class:'button has-text-white orange mb-2' %>
 <div class='box orange'>
   <div class="columns is-centered">
     <div class="column is-6">
@@ -12,7 +12,7 @@
               <th>Date From</th>
               <th>Date To</th>
               <th>Season</th>
-              <th colspan="4">Actions</th>
+              <th colspan="4" class="has-text-centered">Actions</th>
             </tr>
           </thead>
 
@@ -31,7 +31,7 @@
                     <% end %>
                   </td>
                 <% end %>
-                <td><%= link_to 'Destroy', set_season, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                <td><%= link_to 'Delete', set_season, method: :delete, data: { confirm: 'Are you sure?' } %></td>
               </tr>
             <% end %>
           </tbody>
@@ -49,7 +49,7 @@
               <th>Date From</th>
               <th>Date To</th>
               <th>Season</th>
-              <th colspan="4">Actions</th>
+              <th colspan="4" class="has-text-centered">Actions</th>
             </tr>
           </thead>
 
@@ -66,7 +66,7 @@
                     <%= f.submit 'De-activate', class:"has-text-danger" %>
                   <% end %>
                 </td>
-                <td><%= link_to 'Destroy', set_season, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                <td><%= link_to 'Delete', set_season, method: :delete, data: { confirm: 'Are you sure?' } %></td>
               </tr>
             <% end %>
           </tbody>
