Add more change to set season controller and model

--- a/app/views/set_seasons/index.html.erb
+++ b/app/views/set_seasons/index.html.erb
@@ -49,7 +49,7 @@
               <th>Date From</th>
               <th>Date To</th>
               <th>Season</th>
-              <th colspan="4" class="has-text-centered">Actions</th>
+              <th colspan="3" class="has-text-centered">Actions</th>
             </tr>
           </thead>
 
@@ -63,10 +63,9 @@
                 <td><%= link_to 'Edit', edit_set_season_path(set_season) %></td>
                 <td>
                   <%= form_for set_season, :url =>[:deactivate_season, set_season], html: { method: :put } do |f| %>
-                    <%= f.submit 'De-activate', class:"has-text-danger" %>
+                    <%= f.submit 'De-activate Season', class:"has-text-danger" %>
                   <% end %>
                 </td>
-                <td><%= link_to 'Delete', set_season, method: :delete, data: { confirm: 'Are you sure?' } %></td>
               </tr>
             <% end %>
           </tbody>
