--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,12 +19,8 @@
             </a>
 
             <div class="navbar-dropdown has-background-dark">
-              <a class="navbar-item">
-                About
-              </a>
-              <a class="navbar-item">
-                Jobs
-              </a>
+              <%= link_to "Client Payments", client_payments_path, class:"navbar-item has-text-white" %>
+              <%= link_to "Mkt Payments", mkt_payments_path, class:"navbar-item has-text-white" %>
               <a class="navbar-item">
                 Contact
               </a>
